archives/runescape-rogue-prime/k8s/game-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-server
  namespace: runerogueprime
spec:
  replicas: 3
  selector:
    matchLabels:
      app: game-server
  template:
    metadata:
      labels:
        app: game-server
    spec:
      containers:
        - name: game-server
          image: runerogueprime-game-server:latest
          ports:
            - containerPort: 3000
