archives/runescape-rogue-prime/k8s/game-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-server
  namespace: runerogueprime
spec:
  selector:
    app: game-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
